--- a/html/emergencia.html
+++ b/html/emergencia.html
@@ -20,7 +20,7 @@
    <a class="brand-logo center">HOSPITAL GENERAL SAN JUAN DE DIOS</a>
   </div>
 </nav><!--barra superior--->
-<a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
+<a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
 
 
 <div class="container">
@@ -53,7 +53,7 @@
 
 
 
-<a id="btn_consulta" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1">Consultar Datos</a>
+<a id="btn_consulta" class="waves-effect waves-green btn  btn-floating-large   blue darken-1">Consultar Datos</a>
 
 <p id="paratabla">
 
@@ -223,7 +223,7 @@
 
 
 
-<a id="btn" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1">Enviar</a>
+<a id="btn" class="waves-effect waves-green btn  btn-floating-large   blue darken-1">Enviar</a>
 
 <br><br>
  </div><!--Cierra container---->
