--- a/html/ingreso_egreso.html
+++ b/html/ingreso_egreso.html
@@ -18,7 +18,7 @@
     </div>
   </nav><!--barra superior--->
 <div class="container">
-  <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
+  <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
 
       <div class="row">
         <br><br>
@@ -46,7 +46,7 @@
       </div>
   </div><!--Cuadricula 12--->
 
-    <a id="btn_consulta" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1 btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Busqueda de pacientes">Consultar Datos</a>
+    <a id="btn_consulta" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Busqueda de pacientes">Consultar Datos</a>
 
     <p id="paratabla">
 
@@ -303,7 +303,7 @@
 
 
 
-  <a id="btn" class="waves-effect waves-green btn  btn-floating-large pulse  blue darken-1 btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Envio de informacion">Enviar</a>
+  <a id="btn" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Envio de informacion">Enviar</a>
 
   <br><br>
 
