--- a/html/emergencia.html
+++ b/html/emergencia.html
@@ -20,7 +20,9 @@
    <a class="brand-logo center">HOSPITAL GENERAL SAN JUAN DE DIOS</a>
   </div>
 </nav><!--barra superior--->
+
 <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
+<a id="btn_stickers" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="stickers">Stickers</a>
 
 
 <div class="container">
@@ -40,6 +42,20 @@
           <input id="c_apellido2" type="text" class="validate">
           <label for="c_apellido2">Segundo apellido</label>
         </div>
+
+</div><!--Cuadricula 2--->
+<div class="col s12 m6 l3">
+  <div class="input-field">
+           <input id="c_nombre1" type="text" class="validate">
+           <label for="c_nombre1">Primer nombre</label>
+ </div>
+
+</div><!--Cuadricula 1--->
+<div class="col s12 m6 l3">
+       <div class="input-field">
+         <input id="c_nombre2" type="text" class="validate">
+         <label for="c_nombre2">Segundo nombre</label>
+       </div>
 
 </div><!--Cuadricula 2--->
 
