--- a/html/ingreso_egreso.html
+++ b/html/ingreso_egreso.html
@@ -19,6 +19,7 @@
   </nav><!--barra superior--->
 <div class="container">
   <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
+  <a id="btn_stickers" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="stickers">Stickers</a>
 
       <div class="row">
         <br><br>
@@ -36,6 +37,20 @@
               <input id="c_apellido2" type="text" class="validate">
               <label for="c_apellido2">Segundo apellido</label>
             </div>
+
+    </div><!--Cuadricula 2--->
+    <div class="col s12 m6 l3">
+      <div class="input-field">
+               <input id="c_nombre1" type="text" class="validate">
+               <label for="c_nombre1">Primer nombre</label>
+     </div>
+
+    </div><!--Cuadricula 1--->
+    <div class="col s12 m6 l3">
+           <div class="input-field">
+             <input id="c_nombre2" type="text" class="validate">
+             <label for="c_nombre2">Segundo nombre</label>
+           </div>
 
     </div><!--Cuadricula 2--->
 
