cambio en el frontend colores y rows y algunos botones

--- a/html/ingreso_egreso.html
+++ b/html/ingreso_egreso.html
@@ -12,16 +12,18 @@
   </head>
   <body>
     <nav>
-   <div class="nav-wrapper teal deep-orange darken-3">
+   <div class="nav-wrapper blue darken-1">
      <a class="brand-logo center">HOSPITAL GENERAL SAN JUAN DE DIOS</a>
 
     </div>
   </nav><!--barra superior--->
 <div class="container">
-  <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
-  <a id="btn_stickers" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="right" data-delay="50" data-tooltip="stickers">Stickers</a>
 
       <div class="row">
+        <br><br>
+        <a id="btn_limpiar" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="down" data-delay="50" data-tooltip="Limpiar">Limpiar</a>
+        <a id="btn_stickers" class="waves-effect waves-green btn  btn-floating-large   blue darken-1 btn tooltipped" data-position="down" data-delay="50" data-tooltip="stickers">Stickers</a>
+
         <br><br>
          <h3 class="blue-text text-darken-2">Busqueda de pacientes: </h3>
           <br>
@@ -306,9 +308,7 @@
                  <label for="servicio">Servicio </label>
        </div>
       </div><!--Cuadricula 1--->
-      <div class="col s12 m6 l3">
-       <a class="btn" onclick="Materialize.toast('Llamanos a la extension 6013', 4000, 'rounded')">Necesitas ayuda?</a>
-      </div><!--Cuadricula 1--->
+      
     </div><!---fin del 5to row---->
 
 
@@ -324,7 +324,7 @@
 
 </div><!--fin del container------->
 
-<footer class="page-footer teal deep-orange darken-3"><!--footer------->
+<footer class="page-footer blue darken-1"><!--footer------->
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
